Added example checkbox

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bonkasi</title>
+    <title>Step sequencer</title>
 
     <link rel="stylesheet" href="style.css" type="text/css" />
 
@@ -12,6 +12,7 @@
 <body>
 
     <div id="root"></div>
+    <input class="stepCircle" type="checkbox">
     
 </body>
 </html>
