Finished step sequencer with click sound. Problem: Out of sync!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="root"></div>
-    <input class="stepCircle" type="checkbox">
+    <button id="start-stop" type="button" data-started="false">Start</button>
     
 </body>
 </html>
